--- a/src/Main/mainWindow.fxml
+++ b/src/Main/mainWindow.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="999.0" styleClass="main" stylesheets="@../Design/Main.css"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="Main.Controller"
-            fx:id="anchorPane">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="999.0" styleClass="main" stylesheets="@../Design/Main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Controller">
    <children>
       <Pane fx:id="leftPane" prefHeight="635.0" prefWidth="215.0" styleClass="subpane" stylesheets="@../Design/Main.css">
          <children>
@@ -16,10 +14,12 @@
             <Button fx:id="buttonAdd" alignment="CENTER" layoutY="40.0" mnemonicParsing="false" onAction="#AddEvent" prefHeight="31.0" prefWidth="215.0" stylesheets="@../Design/Main.css" text="Add" />
          </children>
       </Pane>
-      <ScrollPane layoutX="224.0" prefHeight="635.0" prefWidth="785.0" styleClass="scrpane" stylesheets="@../Design/SrcollPane.css">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
+      <TableView layoutX="215.0" prefHeight="635.0" prefWidth="786.0" fx:id="tvEvent">
+        <columns>
+          <TableColumn prefWidth="75.0" text="No" />
+          <TableColumn prefWidth="557.0" text="Content" />
+          <TableColumn prefWidth="153.0" text="Deadline" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
