--- a/src/Main/mainWindow.fxml
+++ b/src/Main/mainWindow.fxml
@@ -6,19 +6,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="999.0" styleClass="main" stylesheets="@../Design/Main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Controller">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="999.0" styleClass="main" stylesheets="@../Design/Main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.MainController">
    <children>
-      <Pane fx:id="leftPane" prefHeight="635.0" prefWidth="215.0" styleClass="subpane" stylesheets="@../Design/Main.css">
+      <Pane fx:id="leftPane" prefHeight="${anchorPane.prefHeight}" prefWidth="215.0" styleClass="subpane" stylesheets="@../Design/Main.css">
          <children>
             <Button fx:id="buttonList" alignment="CENTER" mnemonicParsing="false" prefHeight="31.0" prefWidth="215.0" stylesheets="@../Design/Main.css" text="List" />
             <Button fx:id="buttonAdd" alignment="CENTER" layoutY="40.0" mnemonicParsing="false" onAction="#AddEvent" prefHeight="31.0" prefWidth="215.0" stylesheets="@../Design/Main.css" text="Add" />
          </children>
       </Pane>
-      <TableView layoutX="215.0" prefHeight="635.0" prefWidth="786.0" fx:id="tvEvent">
+      <TableView fx:id="tvEvent" layoutX="215.0" prefHeight="${anchorPane.prefHeight}" prefWidth="${anchorPane.prefWidth}" styleClass="tbv" stylesheets="@../Design/TableView.css">
         <columns>
-          <TableColumn prefWidth="75.0" text="No" />
-          <TableColumn prefWidth="557.0" text="Content" />
-          <TableColumn prefWidth="153.0" text="Deadline" />
+          <TableColumn fx:id="tableColumnNumber" prefWidth="75.0" text="No" />
+          <TableColumn fx:id="tableColumnContent" prefWidth="557.0" text="Content" />
+          <TableColumn fx:id="tableColumnDeadline" prefWidth="153.0" text="Deadline" />
         </columns>
       </TableView>
    </children>
